RESOLVED FIXED89301
[EFL] media/video-seek-past-end-playing.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=89301
Summary [EFL] media/video-seek-past-end-playing.html is flaky
Chris Dumez
Reported 2012-06-17 00:24:30 PDT
media/video-seek-past-end-playing.html is flaky on EFL bot. The diff looks like: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/layout-test-results/media/video-seek-past-end-playing-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/layout-test-results/media/video-seek-past-end-playing-actual.txt @@ -10,7 +10,7 @@ RUN(video.currentTime = 500) EXPECTED (video.paused == 'false') OK -EXPECTED (mediaElement.currentTime > '0') OK +EXPECTED (mediaElement.currentTime > '0'), OBSERVED '0' FAIL END OF TEST
Attachments
Patch (4.14 KB, patch)
2012-06-18 07:16 PDT, Chris Dumez
webkit.review.bot: commit-queue-
Archive of layout-test-results from ec2-cr-linux-03 (1.60 MB, application/zip)
2012-06-18 07:59 PDT, WebKit Review Bot
no flags
Patch (4.18 KB, patch)
2012-06-18 09:09 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-06-17 00:28:51 PDT
Skipping test in Bug 89302.
Chris Dumez
Comment 2 2012-06-18 07:16:23 PDT
Created attachment 148095 [details] Patch I have made sure that the patch does not cause any regression in both EFL and GTK ports.
Philippe Normand
Comment 3 2012-06-18 07:33:28 PDT
Comment on attachment 148095 [details] Patch Please check this patch doesn't break frame accurate seeking. One demo: http://www.massive-interactive.nl/html5_video/smpte_test_universal.html
WebKit Review Bot
Comment 4 2012-06-18 07:59:23 PDT
Comment on attachment 148095 [details] Patch Attachment 148095 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12982078 New failing tests: fast/text/international/thai-line-breaks.html fast/loader/unload-form-post-about-blank.html
WebKit Review Bot
Comment 5 2012-06-18 07:59:28 PDT
Created attachment 148100 [details] Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Philippe Normand
Comment 6 2012-06-18 08:54:18 PDT
Comment on attachment 148095 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=148095&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:-1359 > - // EOS was reached but the position is not always 0 in case of > - // reverse playback (or the same as duration in case of forward That issue might still be valid (position > 0 in reverse playback). IIRC it happens with ogg/theora videos, I think I reported a gst bug for oggdemux about this.
Chris Dumez
Comment 7 2012-06-18 09:09:00 PDT
Created attachment 148106 [details] Patch Update the patch based on Philippe's comment. I added back the workaround for the reverse playing case (in case it is still needed and not tested). My patch does not appear to cause any problem with http://www.massive-interactive.nl/html5_video/smpte_test_universal.html
Philippe Normand
Comment 8 2012-06-18 17:52:48 PDT
Comment on attachment 148106 [details] Patch Looks good, thanks!
WebKit Review Bot
Comment 9 2012-06-18 18:32:45 PDT
Comment on attachment 148106 [details] Patch Clearing flags on attachment: 148106 Committed r120654: <http://trac.webkit.org/changeset/120654>
WebKit Review Bot
Comment 10 2012-06-18 18:32:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.