[EFL] media/video-seek-past-end-playing.html is flaky https://bugs.webkit.org/show_bug.cgi?id=89301

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-18
Reviewed by Philippe Normand.

Source/WebCore:

Switch to double for media duration and playback position
calculations to avoid precision problems.
This patch also removes the workaround for the precision
problem in didEnd() which is no longer needed.

Test: media/video-seek-past-end-playing.html

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::playbackPosition):
(WebCore::MediaPlayerPrivateGStreamer::duration):

LayoutTests:

Unskip media/video-seek-past-end-playing.html now that the
precision problem in MediaPlayerPrivateGStreamer is fixed.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/107265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120654 268f45cc-cd09-0410-ab3c-d52691b4dbfc