Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -331,7 +331,7 @@ float MediaPlayerPrivateGStreamer::playbackPosition() const
     // Position is available only if the pipeline is not in GST_STATE_NULL or
     // GST_STATE_READY state.
     if (position != static_cast<gint64>(GST_CLOCK_TIME_NONE))
-        ret = static_cast<float>(position) / static_cast<float>(GST_SECOND);
+        ret = static_cast<double>(position) / GST_SECOND;
 
     LOG_VERBOSE(Media, "Position %" GST_TIME_FORMAT, GST_TIME_ARGS(position));
 
@@ -411,7 +411,7 @@ float MediaPlayerPrivateGStreamer::duration() const
 
     LOG_VERBOSE(Media, "Duration: %" GST_TIME_FORMAT, GST_TIME_ARGS(timeLength));
 
-    return (float) ((guint64) timeLength / 1000000000.0);
+    return static_cast<double>(timeLength) / GST_SECOND;
     // FIXME: handle 3.14.9.5 properly
 }
 
@@ -1356,12 +1356,10 @@ void MediaPlayerPrivateGStreamer::timeChanged()
 void MediaPlayerPrivateGStreamer::didEnd()
 {
     // EOS was reached but the position is not always 0 in case of
-    // reverse playback (or the same as duration in case of forward
-    // playback). So to not confuse the HTMLMediaElement, we
+    // reverse playback. So to not confuse the HTMLMediaElement, we
     // synchronize position and duration values.
     float now = currentTime();
-    if ((now > 0 && m_playbackRate < 0)
-        || (now < duration() && m_playbackRate > 0)) {
+    if (now > 0 && m_playbackRate < 0) {
         m_mediaDuration = now;
         m_mediaDurationKnown = true;
         m_player->durationChanged();
